--- a/public/style/scss/blocks/_main.scss
+++ b/public/style/scss/blocks/_main.scss
@@ -1,7 +1,7 @@
 .main{
     padding-top: 205px;
     position: relative;
-    background: url("/public/img/main.png") no-repeat;
+    background: url("../../../../public/img/main.png") no-repeat;
     background-size: cover;
     height: 700px;
     transition: all .7s;
